[JSC] Fixing more around exception in base64 proposal https://bugs.webkit.org/show_bug.cgi?id=276790 rdar://132026166

Reviewed by Yijia Huang.

Add more missing exception checks in base64 proposal implementation.
Also, avoid using Uint8Array C++ data structure since fast typed array can be faster.

* Source/JavaScriptCore/runtime/JSGenericTypedArrayViewConstructor.cpp:
(JSC::JSC_DEFINE_HOST_FUNCTION):

Canonical link: https://commits.webkit.org/281103@main